# server/internal/rest/v1/auth/models.go
@@ -11,6 +11,20 @@ type Account struct {
 	Gender      string    `json:"gender"`
 	PhoneNumber string    `json:"phone_number"`
 	Password    string    `json:"-"`
+	CreatedAt   time.Time `json:"created_at"`
+}
+
+type RefreshToken struct {
+	Id         string     `json:"id"`
+	AccountId  string     `json:"account_id"`
+	TokenHash  string     `json:"token_hash"`
+	DeviceId   *string    `json:"device_id"`
+	IpAddress  *string    `json:"ip_address"`
+	UserAgent  *string    `json:"user_agent"`
+	IssuedAt   time.Time  `json:"issued_at"`
+	ExpiresAt  time.Time  `json:"expires_at"`
+	LastUsedAt *time.Time `json:"last_used_at"`
+	IsRevoked  bool       `json:"is_revoked"`
 }
 
 type SignupRequestModel struct {
@@ -28,6 +42,7 @@ type LoginRequestModel struct {
 	Password string `json:"password"`
 }
 
-type AccessTokenResponseModel struct {
-	AccessToken string `json:"access_token"`
+type TokensResponseModel struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
 }
