# server/internal/rest/v1/auth/service.go
@@ -2,6 +2,8 @@ package auth
 
 import (
 	"context"
+	"crypto/sha256"
+	"encoding/hex"
 	"errors"
 	"time"
 
@@ -16,11 +18,11 @@ type service struct {
 	store *store
 }
 
-func (s *service) signupNewAccount(ctx context.Context, model SignupRequestModel) (string, error) {
+func (s *service) signup(ctx context.Context, model SignupRequestModel) (string, string, error) {
 	// Hash the password
 	pwdBytes, err := bcrypt.GenerateFromPassword([]byte(model.Password), bcrypt.DefaultCost)
 	if err != nil {
-		return "", response.ErrInternal
+		return "", "", response.ErrInternal
 	}
 	model.Password = string(pwdBytes)
 
@@ -28,74 +30,106 @@ func (s *service) signupNewAccount(ctx context.Context, model SignupRequestModel
 	existingAccount, err := s.store.selectAccountByEmail(ctx, model.Email)
 	if err != nil {
 		if !errors.Is(err, response.ErrNotFound) {
-			return "", err
+			return "", "", err
 		}
 	}
 	if existingAccount != nil {
-		return "", response.ErrDuplicateRecord
+		return "", "", response.ErrDuplicateRecord
 	}
 
 	// Call the store
 	newAccount, err := s.store.insertAccount(ctx, model)
 	if err != nil {
-		return "", err
+		return "", "", err
 	}
 
 	// Generate jwt
-	now := time.Now()
-	jwtDuration, err := time.ParseDuration(s.cfg.JwtExpiration)
+	accessToken, refreshToken, err := s.getAuthTokens(ctx, newAccount.Id)
 	if err != nil {
-		return "", response.ErrInternal
+		return "", "", response.ErrInternal
 	}
 
-	_, token, err := s.cfg.JwtAuth.Encode(map[string]interface{}{
-		"iss": "gdsi api",
-		"sub": newAccount.Id,
-		"aud": "gdsi app",
-		"exp": now.Add(jwtDuration).Unix(),
-		"nbf": now.Unix(),
-		"iat": now.Unix(),
-	})
-	if err != nil {
-		return "", response.ErrInternal
-	}
-
-	return token, nil
+	return accessToken, refreshToken, nil
 }
 
-func (s *service) getAccessToken(ctx context.Context, model LoginRequestModel) (string, error) {
+func (s *service) login(ctx context.Context, model LoginRequestModel) (string, string, error) {
 	// Call the store
 	account, err := s.store.selectAccountByEmail(ctx, model.Email)
 	if err != nil {
-		return "", err
+		return "", "", err
 	}
 
 	// Validate password
 	err = bcrypt.CompareHashAndPassword([]byte(account.Password), []byte(model.Password))
 	if err != nil {
-		return "", response.ErrNotFound
+		return "", "", response.ErrNotFound
 	}
 
 	// Generate jwt
-	now := time.Now()
-	jwtDuration, err := time.ParseDuration(s.cfg.JwtExpiration)
+	accessToken, refreshToken, err := s.getAuthTokens(ctx, account.Id)
 	if err != nil {
-		return "", response.ErrInternal
+		return "", "", response.ErrInternal
 	}
 
-	_, token, err := s.cfg.JwtAuth.Encode(map[string]interface{}{
-		"iss": "gdsi api",
-		"sub": account.Id,
-		"aud": "gdsi app",
-		"exp": now.Add(jwtDuration).Unix(),
+	return accessToken, refreshToken, nil
+}
+
+func (s *service) getAuthTokens(ctx context.Context, accountId string) (access, refresh string, err error) {
+	var iss string = "gdsi api"
+	var aud string = "gdsi app"
+
+	// Parse config vars
+	durationAccess, err := time.ParseDuration(s.cfg.JwtAccessExpiration)
+	if err != nil {
+		return
+	}
+	durationRefresh, err := time.ParseDuration(s.cfg.JwtRefreshExpiration)
+	if err != nil {
+		return
+	}
+
+	now := time.Now()
+
+	// Expiration dates for tokens
+	var expAccess time.Time = now.Add(durationAccess)
+	var expRefresh time.Time = now.Add(durationRefresh)
+
+	// Jwt claims
+	var claims = map[string]interface{}{
+		"iss": iss,
+		"sub": accountId,
+		"aud": aud,
+		"exp": expAccess.Unix(),
 		"nbf": now.Unix(),
 		"iat": now.Unix(),
-	})
-	if err != nil {
-		return "", response.ErrInternal
 	}
 
-	return token, nil
+	// Create access jwt
+	_, access, err = s.cfg.JwtAuth.Encode(claims)
+	if err != nil {
+		return
+	}
+
+	// Change the exp value
+	claims["exp"] = expRefresh.Unix()
+
+	// Create refresh token
+	_, refresh, err = s.cfg.JwtAuth.Encode(claims)
+	if err != nil {
+		return
+	}
+
+	// Hash the refresh token for storage
+	hash := sha256.Sum256([]byte(refresh))
+	refreshHashed := hex.EncodeToString(hash[:])
+
+	// Call the store
+	_, err = s.store.insertRefreshToken(ctx, accountId, refreshHashed, now, expRefresh)
+	if err != nil {
+		return
+	}
+
+	return
 }
 
 func newService(cfg *config.Config, store *store) *service {
